It's rewrite-half-our-energy-classes time, my dudes!